# 3d_viewer

./: .gitmodules  README.md
src/: CMakeLists.txt  Makefile
src/3d_party/matrix/: CMakeLists.txt  Makefile
src/3d_party/matrix/include/: matrix.h
src/3d_party/matrix/src/: matrix.inc  matrix_bool.cc  matrix_bool.h
src/3d_party/matrix/tests/: arithmetics.cc  comparator.cc  constructors.cc  element_access.cc  functions.cc  modifiers.cc  tests.cc  tests.h
src/3d_party/token_parser/: CMakeLists.txt  Makefile
src/3d_party/token_parser/include/: token_parser.h
src/3d_party/token_parser/src/: token.cc  token.h  token_parser.cc
src/doxy/: doxyfile
src/src/: main.cc
src/src/controller/: controller.h  controller_default.cc  controller_default.h
src/src/model/: color.h  model.cc  model.h
src/src/model/canvas/: canvas.h  opengl_canvas.h
src/src/model/gif_writer/: gif_writer.cc  gif_writer.h
src/src/model/image_reader/: factory_image_reader.cc  factory_image_reader.h  image_reader.h  image_reader_bmp.cc  image_reader_bmp.h
src/src/model/image_writer/: factory_image_writer.cc  factory_image_writer.h  image_writer.h  image_writer_bmp.cc  image_writer_bmp.h  image_writer_jpeg.cc  image_writer_jpeg.h
src/src/model/light_source/: light_source.h
src/src/model/mat4/: mat4.cc  mat4.h  vec3.cc  vec3.h
src/src/model/opengl_renderer/: color.h  opengl.h  opengl_renderer.cc  opengl_renderer.h
src/src/model/opengl_renderer/light_source/: light_source.h
src/src/model/opengl_renderer/object/: object.h  object_from_view.cc  object_from_view.h
src/src/model/opengl_renderer/object_renderer/: factory.cc  factory.h  object_renderer.cc  object_renderer.h  object_renderer_color.cc  object_renderer_color.h  object_renderer_texture.cc  object_renderer_texture.h  object_renderer_v_color.cc  object_renderer_v_color.h  object_renderer_vn_color.cc  object_renderer_vn_color.h  object_renderer_vt_color.cc  object_renderer_vt_color.h  object_renderer_vt_texture.cc  object_renderer_vt_texture.h  object_renderer_vtn_color.cc  object_renderer_vtn_color.h  object_renderer_vtn_texture.cc  object_renderer_vtn_texture.h
src/src/model/opengl_renderer/object_renderer_keeper/: object_renderer_keeper.cc  object_renderer_keeper.h
src/src/model/opengl_renderer/scene/: scene.cc  scene.h  scene_from_view.cc  scene_from_view.h
src/src/model/opengl_renderer/shader_keeper/: shader_keeper.cc  shader_keeper.h
src/src/model/opengl_renderer/shader_programm_keeper/: shader_programm_keeper.cc  shader_programm_keeper.h
src/src/model/renderer/: renderer.cc  renderer.h
src/src/model/renderer_imp/: renderer_imp.h
src/src/model/renderer_imp_opengl/: renderer_imp_opengl.cc  renderer_imp_opengl.h
src/src/model/view_object/: view_object.cc  view_object.h  view_object_data.cc  view_object_data.h
src/src/model/view_object/data_parser/: factory.cc  factory.h  parser.h  parser_obj.cc  parser_obj.h  parser_obj_file_data.h
src/src/model/view_scene/: view_scene.cc  view_scene.h
src/src/view/: resources.qrc  viewer.pro
src/src/view/canvas/: qt_opengl_canvas.cc  qt_opengl_canvas.h
src/src/view/mainwindow/: change_mainwindow_widgets.cc  connects.cc  initial_setup_of_widgets.cc  line_widget_slots.cc  mainwindow.cc  mainwindow.h  mainwindow.ui  slider_and_lineedit_scale_slot.cc  sliders_and_lineedit_position_slots.cc  sliders_and_lineedit_rotation_slots.cc  spec_widget_slots.cc  texture_widget_slots.cc  utils.cc  vertex_widget_slots.cc  widget_button_slots.cc
src/src/view/renderedlight/: renderedlight.cc  renderedlight.h  renderedlight.ui
src/src/view/renderedobject/: renderedobject.cc  renderedobject.h  renderedobject.ui
src/src/view/widgetlist/: widgetlist.cc  widgetlist.h
src/tests/model/: test_view_object_data_parser.cc
